Update firmware and app

--- a/Android App/app/src/main/AndroidManifest.xml
+++ b/Android App/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TestApp">
         <activity
-            android:name=".ThreadControlActivity"
+            android:name=".ModeSelectActivity"
             android:exported="false" />
 
         <service
